--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
                         </div>
                         <div class="prevention-body">
                             <h3 class="center custom-color mxsbot mstop">Wash Your Place</h3>
-                            <p class="center">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Qui quis aliquam ea quae quos, illo dolore tenetur officiis hic distinctio! Nisi amet modi magni, quos nihil dolores libero molestiae est.</p>
+                            <p class="center">Keeping your surroundings clean is crucial in the fight against COVID-19. Regularly clean and disinfect commonly touched surfaces like doorknobs, light switches, and countertops. This simple practice helps prevent the spread of the virus and ensures a safer environment for everyone.</p>
                         </div>
                     </div>
                     <div class="prevention">
@@ -67,7 +67,7 @@
                         </div>
                         <div class="prevention-body">
                             <h3 class="center custom-color mxsbot mstop">Maintain Distance</h3>
-                            <p class="center">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Qui quis aliquam ea quae quos, illo dolore tenetur officiis hic distinctio! Nisi amet modi magni, quos nihil dolores libero molestiae est.</p>
+                            <p class="center">Social distancing is a powerful tool in reducing the transmission of COVID-19. Keep a safe distance from others, especially in crowded places. By maintaining physical distance, you play a key role in breaking the chain of infection and protecting yourself and those around you.</p>
                         </div>
                     </div>
                     <div class="prevention">
@@ -76,7 +76,7 @@
                         </div>
                         <div class="prevention-body">
                             <h3 class="center custom-color mxsbot mstop">Don't Touch Face</h3>
-                            <p class="center">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Qui quis aliquam ea quae quos, illo dolore tenetur officiis hic distinctio! Nisi amet modi magni, quos nihil dolores libero molestiae est.</p>
+                            <p class="center">Avoid touching your face, especially your eyes, nose, and mouth. The virus can enter your body through these areas, and by refraining from touching your face, you reduce the risk of infection. Make it a habit to use tissues or your elbow to cover coughs and sneezes.</p>
                         </div>
                     </div>
                 </div>
@@ -87,7 +87,7 @@
                         </div>
                         <div class="prevention-body">
                             <h3 class="center custom-color mxsbot mstop">Wash Your Hand</h3>
-                            <p class="center">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Qui quis aliquam ea quae quos, illo dolore tenetur officiis hic distinctio! Nisi amet modi magni, quos nihil dolores libero molestiae est.</p>
+                            <p class="center">Hand hygiene is one of the most effective ways to prevent the spread of COVID-19. Wash your hands frequently with soap and water for at least 20 seconds, especially after being in a public place or touching surfaces. If soap is not available, use a hand sanitizer with at least 60% alcohol.</p>
                         </div>
                     </div>
                     <div class="prevention">
@@ -96,7 +96,7 @@
                         </div>
                         <div class="prevention-body">
                             <h3 class="center custom-color mxsbot mstop">Use Napkin</h3>
-                            <p class="center">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Qui quis aliquam ea quae quos, illo dolore tenetur officiis hic distinctio! Nisi amet modi magni, quos nihil dolores libero molestiae est.</p>
+                            <p class="center">Carrying and using napkins or tissues can be a simple yet impactful measure in preventing the spread of germs. Use them to cover your mouth and nose when coughing or sneezing. Dispose of used napkins properly to maintain cleanliness and reduce the risk of contamination.</p>
                         </div>
                     </div>
                     <div class="prevention">
@@ -105,7 +105,7 @@
                         </div>
                         <div class="prevention-body">
                             <h3 class="center custom-color mxsbot mstop">Wear a Mask</h3>
-                            <p class="center">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Qui quis aliquam ea quae quos, illo dolore tenetur officiis hic distinctio! Nisi amet modi magni, quos nihil dolores libero molestiae est.</p>
+                            <p class="center">Wearing a mask is a responsible and considerate action to protect both yourself and others. Masks help contain respiratory droplets that may carry the virus. Ensure your mask covers your nose and mouth properly, and wear it consistently in public spaces where social distancing may be challenging. It's a small act with significant positive effects in the collective effort against COVID-19.</p>
                         </div>
                     </div>
                 </div>
