--- a/index.html
+++ b/index.html
@@ -172,7 +172,7 @@
                                             </div>
                                             <div class="list-content">
                                                 <h3>Wash Your Hand</h3>
-                                                <p>Regular handwashing is a fundamental practice in preventing the spread of COVID-19. Remember to wash your hands thoroughly with soap and water for at least 20 seconds, especially after being in public spaces, touching surfaces, or coughing and sneezing. This simple yet effective routine significantly reduces the risk of infection and contributes to a healthier community.</p>
+                                                <p class="ps">Regular handwashing is a fundamental practice in preventing the spread of COVID-19. Remember to wash your hands thoroughly with soap and water for at least 20 seconds, especially after being in public spaces, touching surfaces, or coughing and sneezing. This simple yet effective routine significantly reduces the risk of infection and contributes to a healthier community.</p>
                                             </div>
                                         </div>
                                     </div>
@@ -185,7 +185,7 @@
                                             </div>
                                             <div class="list-content">
                                                 <h3>Always Wear a Mask</h3>
-                                                <p>Wearing a mask is a vital precautionary measure to protect yourself and those around you from respiratory droplets that may carry the virus. Ensure your mask covers both your nose and mouth, and wear it consistently in public settings or when social distancing is challenging. By making mask-wearing a routine, you actively participate in creating a safer environment for everyone.</p>
+                                                <p class="ps">Wearing a mask is a vital precautionary measure to protect yourself and those around you from respiratory droplets that may carry the virus. Ensure your mask covers both your nose and mouth, and wear it consistently in public settings or when social distancing is challenging. By making mask-wearing a routine, you actively participate in creating a safer environment for everyone.</p>
                                             </div>
                                         </div>
                                     </div>
@@ -198,7 +198,7 @@
                                             </div>
                                             <div class="list-content">
                                                 <h3>Stay Home During Fever</h3>
-                                                <p>If you experience symptoms like fever, cough, or difficulty breathing, it's crucial to stay home and seek medical advice. Avoid going to work, school, or public places to prevent potential transmission. By taking this responsible step, you not only protect yourself but also contribute to the well-being of your community by minimizing the risk of spreading illness. Remember, staying home when unwell is a powerful act of solidarity in the fight against COVID-19.</p>
+                                                <p class="ps">If you experience symptoms like fever, cough, or difficulty breathing, it's crucial to stay home and seek medical advice. Avoid going to work, school, or public places to prevent potential transmission. By taking this responsible step, you not only protect yourself but also contribute to the well-being of your community by minimizing the risk of spreading illness. Remember, staying home when unwell is a powerful act of solidarity in the fight against COVID-19.</p>
                                             </div>
                                         </div>
                                     </div>
@@ -220,7 +220,7 @@
                                             </div>
                                             <div class="list-content">
                                                 <h3>Avoid Close Contact With Animals</h3>
-                                                <p>To reduce the risk of zoonotic transmission, it's essential to avoid close contact with animals, especially those in high-risk areas. Refrain from petting, feeding, or approaching wildlife. If you have pets, practice good hygiene, wash your hands after handling them, and seek veterinary advice if they exhibit any unusual symptoms.</p>
+                                                <p class="ps" >To reduce the risk of zoonotic transmission, it's essential to avoid close contact with animals, especially those in high-risk areas. Refrain from petting, feeding, or approaching wildlife. If you have pets, practice good hygiene, wash your hands after handling them, and seek veterinary advice if they exhibit any unusual symptoms.</p>
                                             </div>
                                         </div>
                                     </div>
@@ -233,7 +233,7 @@
                                             </div>
                                             <div class="list-content">
                                                 <h3>Avoid Close Contact With People</h3>
-                                                <p>Minimizing close contact with others is a key preventive measure against COVID-19. Maintain a safe distance, typically at least six feet, from individuals outside your household. Avoid hugging, shaking hands, or any other physical contact to reduce the potential transmission of the virus.</p>
+                                                <p class="ps">Minimizing close contact with others is a key preventive measure against COVID-19. Maintain a safe distance, typically at least six feet, from individuals outside your household. Avoid hugging, shaking hands, or any other physical contact to reduce the potential transmission of the virus.</p>
                                             </div>
                                         </div>
                                     </div>
@@ -246,7 +246,7 @@
                                             </div>
                                             <div class="list-content">
                                                 <h3>Avoid Crowded Areas</h3>
-                                                <p>Steer clear of crowded places to lower the risk of exposure to respiratory droplets containing the virus. When possible, choose outdoor spaces or less populated areas. If you must be in a crowded setting, wear a mask, practice good hand hygiene, and adhere to social distancing guidelines to protect yourself and others. Being mindful of your surroundings contributes to the collective effort in curbing the spread of COVID-19.</p>
+                                                <p class="ps">Steer clear of crowded places to lower the risk of exposure to respiratory droplets containing the virus. When possible, choose outdoor spaces or less populated areas. If you must be in a crowded setting, wear a mask, practice good hand hygiene, and adhere to social distancing guidelines to protect yourself and others. Being mindful of your surroundings contributes to the collective effort in curbing the spread of COVID-19.</p>
                                             </div>
                                         </div>
                                     </div>
