--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
             <nav class="navbar">
                 <div class="logo-container">
                     <div class="img-logo">
-                        <img src="assets/537-5377029_home-health-care-logo-hd-png-download-removebg-preview.png" alt="" height="70">
+                       <a href="https://projectcovid19services.netlify.app/"><img src="assets/537-5377029_home-health-care-logo-hd-png-download-removebg-preview.png" alt="" height="70"></a> 
                     </div>
                 </div>
                 <ul id="ul">
