--- a/index.html
+++ b/index.html
@@ -279,6 +279,7 @@
                         </div>
                         <div id="regional-data">
                             <h4 class="center font-size-25px custom-color fw-normal mtop msbot">COVID-19 Cases in <span id="populate-country">India</span></h4>
+                            <p class="msbot red" id="error"></p>
                             <div class="region-data">
                                 <div class="total">
                                     <p class="mxsbot font-size-25px">Total Cases</p>
