--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/dompurify/2.4.1/purify.min.js"></script>
     <link href="https://fonts.cdnfonts.com/css/netflix-font" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link rel="shortcut icon" href="assets/favicon.png" type="image/x-icon">
     <link rel="stylesheet" href="styles.css">
     <link rel="stylesheet" href="styleutil1.css">
     <link rel="stylesheet" href="styleutil2.css">
@@ -30,7 +31,7 @@
                     <li id="precaution">Precaution</li>
                     <li id="data">COVID-19 data</li>
                     <li id="contact">Contact</li>
-                    
+                    <li id="news">News</li>
                 </ul>
                 <i class="fas fa-bars nav-icon hide"></i>
             </nav>
