--- a/index.html
+++ b/index.html
@@ -438,6 +438,9 @@
                     
                 </div>
                 <h4 class="center fw-normal i">Looks like you have reached the end.</h4>
+                <div class="reload-btn">
+                    <button class="btn">Reload?</button>
+                </div>
             </div>
             
         </div>
