--- a/index.html
+++ b/index.html
@@ -439,7 +439,7 @@
                 </div>
                 <h4 class="center fw-normal i">Looks like you have reached the end.</h4>
                 <div class="reload-btn">
-                    <button class="btn">Reload?</button>
+                    <button class="btn">Refresh</button>
                 </div>
             </div>
             
