--- a/index.html
+++ b/index.html
@@ -437,7 +437,7 @@
                 </div>
                 <h4 class="center fw-normal i">Looks like you have reached the end.</h4>
                 <div class="reload-btn">
-                    <button class="btn">Refresh news</button>
+                    <button class="btn">Load more</button>
                 </div>
             </div>
         </div>
