--- a/index.html
+++ b/index.html
@@ -435,7 +435,7 @@
                         
                     </section>
                 </div>
-                <h4 class="center fw-normal i">Looks like you have reached the end.</h4>
+                <h4 id="end-of-news" class="center fw-normal i"></h4>
                 <div class="reload-btn">
                     <button class="btn">Load more</button>
                 </div>
