updated news and links

--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
                     </div>
                     
                 </div>
-                <h3 class="center custom-color mtop fw-normal">Experiencing one or more of these symtoms? Get your symptoms checked <a href="">here</a>.</h3>
+                <h3 class="center custom-color mtop fw-normal">Experiencing one or more of these symtoms? Get your symptoms checked <a href="test.html">here</a>.</h3>
                 <p class="font-size-25px b custom-color center mstop">OR</p>
                 <div class="contact-btn">
                     <button class="btn">Contact Us</button>
@@ -332,9 +332,9 @@
             
                     <div class="resources mxltop">
                         <h3 class="custom-color">Community Resources</h3>
-                        <ul class="card ">
+                        <ul class="card">
                             <li><a href="https://aarogyasetu.gov.in/">AAROGYA SETU</a></li>
-                            <li><a href="who-link">World Health Organization (WHO)</a></li>
+                            <li><a href="https://www.who.int/emergencies/diseases/novel-coronavirus-2019">World Health Organization (WHO)</a></li>
                             <!-- Add more links as needed -->
                         </ul>
                     </div>
