more links added and updated

--- a/index.html
+++ b/index.html
@@ -257,7 +257,7 @@
                 </div>
             </div>
             <div class="covid-data mxltop">
-                <h2 class="custom-color fw-normal center">COVID-19 DATA</h2>
+                <h2 class="custom-color fw-normal center">COVID-19 DATA & SERVICES</h2>
                 <section class="services-container mltop">
                     <!--<div class="data-visualization">
                         <h3 class="custom-color">Data Visualization</h3>
@@ -323,8 +323,12 @@
                     </div>
             
                     <div class="educational-content mxltop">
-                        <h3 class="custom-color center">COVID-19 Education</h3>
-                        <div class="education card ">
+                        <h3 class="custom-color center">COVID-19 Services</h3>
+                        <ul>
+                            <li class="center b"><a href="">Mental Health Check</a></li>
+                            <li class="center mstop b"><a href="test.html">COVID-19 Symptoms Checker</a></li>
+                        </ul>
+                        <div class="education ptop">
                             <p>Learn more about COVID-19 prevention, symptoms, and stay informed to protect yourself and others.</p>
                         </div>
                         
