added mental health check

--- a/index.html
+++ b/index.html
@@ -325,7 +325,7 @@
                     <div class="educational-content mxltop">
                         <h3 class="custom-color center">COVID-19 Services</h3>
                         <ul>
-                            <li class="center b"><a href="">Mental Health Check</a></li>
+                            <li class="center b"><a href="mental.html">Mental Health Check</a></li>
                             <li class="center mstop b"><a href="test.html">COVID-19 Symptoms Checker</a></li>
                         </ul>
                         <div class="education ptop">
