added more covid resources

--- a/index.html
+++ b/index.html
@@ -325,7 +325,7 @@
                     <div class="educational-content mxltop">
                         <h3 class="custom-color center">COVID-19 Services</h3>
                         <ul>
-                            <li class="center b"><a href="mental.html">Mental Health Check</a></li>
+                            <li class="center b"><a href="mental.html">Mental Health Checker</a></li>
                             <li class="center mstop b"><a href="test.html">COVID-19 Symptoms Checker</a></li>
                         </ul>
                         <div class="education ptop">
@@ -339,6 +339,8 @@
                         <ul class="card">
                             <li><a href="https://aarogyasetu.gov.in/">AAROGYA SETU</a></li>
                             <li><a href="https://www.who.int/emergencies/diseases/novel-coronavirus-2019">World Health Organization (WHO)</a></li>
+                            <li><a href="https://www.cdc.gov/coronavirus/2019-ncov/easy-to-read/index.html">Centres for Disease Control and Prevention</a></li>
+                            <li><a href="https://www.fda.gov/emergency-preparedness-and-response/coronavirus-disease-2019-covid-19/covid-19-educational-resources">Food and Drug Administration</a></li>
                             <!-- Add more links as needed -->
                         </ul>
                     </div>
