--- a/mental.html
+++ b/mental.html
@@ -10,7 +10,23 @@
 </head><link rel="shortcut icon" href="assets/favicon.png" type="image/x-icon">
 <body class="body">
     <div class="body-wrapper">
-        <div class="app">
+        <div class="welcome flex flex-col items-center bg-white text-gray-700 h-9/12 p-5 gap-24 rounded-xl w-11/12 transition-all duration-500 max-w-3xl">
+            <div class="header">
+                <p class="text-3xl py-4 font-bold">Welcome to the Mental Health Checker</p>
+            </div>
+            <div class="text1">
+                <p class="font-semibold text-lg">This is a simple Mental Health Assessment app which will more or less diagonise the presence of mental health problem. Nevertheless, you are always encouraged to visit a mental healthcare provider or a therapist in case your mental health worsens or feel suicidal.</p>
+            </div>
+            <div class="text2">
+                <p class="font-semibold text-center">Click the start quiz button below to start the mental health checker. Beware, you cannot skip a question or revisit an already answered question.
+                The result is shown after all the questions have been answered.</p>
+                </p>
+            </div>
+            <div class="start-btn-wrapper py-4">
+                <button id="start-quiz" class="start-btn h-11 w-32 rounded border border-blue-700 bg-blue-700 font-medium text-white hover:opacity-90">Start Quiz</button>
+            </div>
+        </div>
+        <div class="app hidden transition-all duration-500">
             <h1 class="center">Mental Health Checker</h1>
             <div class="quiz">
                 <h2 class="center" id="question">
