--- a/mental.html
+++ b/mental.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="styleTest.css">
     <link rel="stylesheet" href="styleutil1.css">
     <link rel="stylesheet" href="styleutil2.css">
+    <script src="https://cdn.tailwindcss.com"></script>
 </head><link rel="shortcut icon" href="assets/favicon.png" type="image/x-icon">
 <body class="body">
     <div class="body-wrapper">
