--- a/mental.html
+++ b/mental.html
@@ -13,7 +13,7 @@
     <div class="body-wrapper">
         <div class="welcome flex flex-col items-center bg-white text-gray-700 h-9/12 p-5 gap-24 rounded-xl w-11/12 transition-all duration-500 max-w-3xl">
             <div class="header">
-                <p class="text-3xl py-4 font-bold">Welcome to the Mental Health Checker</p>
+                <p class="text-3xl py-4 font-bold text-center">Welcome to the Mental Health Checker</p>
             </div>
             <div class="text1">
                 <p class="font-semibold text-lg">This is a simple Mental Health Assessment app which will more or less diagonise the presence of mental health problem. Nevertheless, you are always encouraged to visit a mental healthcare provider or a therapist in case your mental health worsens or feel suicidal.</p>
