--- a/test.html
+++ b/test.html
@@ -14,7 +14,7 @@
     <div class="body-wrapper">
         <div class="welcome flex flex-col items-center bg-white text-gray-700 h-9/12 p-5 gap-24 rounded-xl w-11/12 transition-all duration-500 max-w-3xl">
             <div class="header">
-                <p class="text-3xl py-4 font-bold">Welcome to the COVID-19 Symptoms Checker</p>
+                <p class="text-3xl py-4 font-bold text-center">Welcome to the COVID-19 Symptoms Checker</p>
             </div>
             <div class="text1">
                 <p class="font-semibold text-lg">This is a simple quiz qpplication that will ask you 15 Questions in order to assess you chances of having COVID-19. Be advised that this app is not the final test result and you must contact a healthcare provided to accurately test your symptoms.</p>
