--- a/test.html
+++ b/test.html
@@ -12,20 +12,21 @@
 <body class="body">
     
     <div class="body-wrapper">
-        <div class="welcome flex flex-col items-center bg-white text-gray-700 h-9/12 p-5 gap-24 rounded-xl w-11/12 transition-all duration-500 max-w-3xl">
+        <div class="welcome flex flex-col items-center bg-white text-gray-700 h-9/12 p-5 gap-24 rounded-xl w-11/12 transition-all duration-500 max-w-3xl sm:h-full sm:flex justify-center sm:border-none">
             <div class="header">
-                <p class="text-3xl py-4 font-bold text-center">Welcome to the COVID-19 Symptoms Checker</p>
+              <p class="text-3xl py-4 font-bold text-center">Welcome to the COVID-19 Symptoms Checker</p>
             </div>
             <div class="text1">
-                <p class="font-semibold text-lg">This is a simple quiz qpplication that will ask you 15 Questions in order to assess you chances of having COVID-19. Be advised that this app is not the final test result and you must contact a healthcare provided to accurately test your symptoms.</p>
-            </div>
-            <div class="text2">
-                <p class="font-semibold text-center">Click the start quiz button below to start the quiz. Beware, you cannot skip a question or revist an already answered question.
-                The result is shown after all the questions have been answered.</p>
-                </p>
-            </div>
-            <div class="start-btn-wrapper py-4">
-                <button id="start-quiz" class="start-btn h-11 w-32 rounded border border-blue-700 bg-blue-700 font-medium text-white hover:opacity-90">Start Quiz</button>
+                  <p class="font-semibold text-lg">This is a simple quiz qpplication that will ask you 15 Questions in order to assess you chances of having COVID-19. Be advised that this app is not the final test result and you must contact a healthcare provided to accurately test your symptoms.</p>
+              </div>
+              <div class="text2">
+                  <p class="font-semibold text-center">Click the start quiz button below to start the quiz. Beware, you cannot skip a question or revist an already answered question.
+                  The result is shown after all the questions have been answered.</p>
+                  </p>
+              </div>
+              <div class="start-btn-wrapper py-4">
+                  <button id="start-quiz" class="start-btn h-11 w-32 rounded border border-blue-700 bg-blue-700 font-medium text-white hover:opacity-90">Start Quiz</button>
+              </div>
             </div>
         </div>
         <div class="app hidden transition-all duration-500">
