--- a/index.html
+++ b/index.html
@@ -25,6 +25,9 @@
                 </div>
                 <ul id="ul">
                     <li><i class="fas fa-times nav-cross hide"></i></li>
+                    <li><div class="qr-code">
+                        <img src="qrcode_105537574_c1ad5f9908b505f48bbfaf886c42d64f.jpg" alt="" width="80">
+                    </div></li>
                     <li id="home">Home</li>
                     <li id="prevent">Prevent</li>
                     <li id="symptoms">Symptoms</li>
