added qr scan in foorter

--- a/index.html
+++ b/index.html
@@ -474,6 +474,9 @@
                 <li><a href="#">Services</a></li>
                 <li><a href="#">Doctor</a></li>
                 <li><a href="#">Hand-Wash</a></li>
+                <li><div class="qr-code">
+                    <img src="qrcode_105537574_c1ad5f9908b505f48bbfaf886c42d64f.jpg" alt="" width="100">
+                </div></li>
             </ul>
         </div>
 
